[package]
name = "smooai-smooth-code"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Smooth Coding — AI-assisted coding TUI"

[lib]
name = "smooth_code"

[dependencies]
smooth-operator.workspace = true
# skills discovery + the chief/intent_classifier cast roles (re-homed from the
# engine at 0.14.0)
smooth-cast.workspace = true
# Direct dep so the TUI can consume the auto-mode wire types
# (PendingAccessRequest, AccessEvent, …) without taking a dep on
# smooth-bigsmooth — keeps the dep graph from forming a TUI → server
# coupling.
smooth-narc = { path = "../smooth-narc", package = "smooai-smooth-narc" }
smooth-pearls.workspace = true
async-trait.workspace = true
ratatui.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
similar.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs-next.workspace = true
futures-util.workspace = true
ignore.workspace = true
globset.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Auto-mode end-to-end test wires the TUI's SSE subscriber against the
# real AccessStore + the four /api/access routes. Spinning an axum
# server in-test is cheaper than mocking the wire format.
smooth-bigsmooth = { path = "../smooth-bigsmooth", package = "smooai-smooth-bigsmooth" }
axum.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }

[lints]
workspace = true
