[package]
name = "smooai-smooth-credential-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Docker-spec credential helper that brokers short-lived creds through Big Smooth"

[[bin]]
name = "smooth-credential-helper"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
