[package]
name = "smooai-smooth-goalie"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Goalie — in-VM HTTP forward proxy, delegates access decisions to Wonk"

[lib]
name = "smooth_goalie"
path = "src/lib.rs"

[[bin]]
name = "smooth-goalie"
path = "src/main.rs"

[dependencies]
smooth-policy.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
