[package]
name = "smooai-smooth-host-stub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Host Stub — credential broker bridging the single sandbox VM to host CLIs"
readme = "README.md"

[lib]
name = "smooth_host_stub"

[[bin]]
name = "smooth-host-stub"
path = "src/bin/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
url = "2"
glob = "0.3"

# gRPC over UDS (pearl th-893801 Phase 2).
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tower = { workspace = true, features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
