[package]
name = "smooth-issues"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Issues — built-in issue tracker with SQLite + optional DoltLite backend"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
