[package]
name = "smooai-smooth-narc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Narc — in-VM tool surveillance, secret detection, prompt injection guard"

[lib]
name = "smooth_narc"

[dependencies]
smooth-operator.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
