[package]
name = "smooai-smooth-narc"
# Internal crate — part of the `th` binary, not a public library.
# `th` ships as a GitHub binary release; only smooai-smooth-operator-core
# is published to crates.io (separately, as its own crate). Pearl th-607f69.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Narc — in-VM tool surveillance, secret detection, prompt injection guard"
readme = "README.md"

[lib]
name = "smooth_narc"

[dependencies]
smooth-operator.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
regex = "1"

# gRPC. tonic provides the server/client runtime; prost is the proto
# runtime. tonic-build runs in build.rs and codegens from
# proto/narc.proto at the workspace root. Pearl th-893801.
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# `serve_uds` in src/grpc.rs uses tokio_stream::wrappers::UnixListenerStream
# to feed tonic's `serve_with_incoming`. Needs the `net` feature
# in non-test code, so it's a real dep here.
tokio-stream = { workspace = true, features = ["net"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[lints]
workspace = true
