[package]
name = "smooth-operator-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Operator runner — the binary that runs inside each microVM. Hosts the agent loop, Narc tool surveillance, and (optionally) Wonk policy checks, streaming JSON-lines AgentEvents on stdout."

[[bin]]
name = "smooth-operator-runner"
path = "src/main.rs"

[dependencies]
smooth-operator = { path = "../smooth-operator" }
smooth-narc = { path = "../smooth-narc" }
smooth-scribe = { path = "../smooth-scribe" }
smooth-wonk = { path = "../smooth-wonk" }
smooth-goalie = { path = "../smooth-goalie" }
smooth-policy.workspace = true
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true

[lints]
workspace = true
