[package]
name = "smooai-smooth-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Operator — Rust-native AI agent framework with built-in checkpointing, tool system, and LLM client"
readme = "README.md"
keywords = ["ai", "agent", "llm", "tool-use", "orchestration"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "smooth_operator"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
dirs-next.workspace = true
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
rusqlite.workspace = true
smooth-narc = { path = "../smooth-narc", package = "smooai-smooth-narc" }

[lints]
workspace = true
