[package]
name = "smooth-pearls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Pearls — built-in pearl tracker. Dolt-backed dependency-graph work items with version control and git sync."

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
dirs-next.workspace = true
thiserror.workspace = true
tracing.workspace = true
smooth-operator.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
