[package]
name = "smooai-smooth-pearls"
# Internal crate — part of the `th` binary, not a public library.
# `th` ships as a GitHub binary release; only smooai-smooth-operator-core
# is published to crates.io (separately, as its own crate). Pearl th-607f69.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Pearls — built-in pearl tracker. Dolt-backed dependency-graph work items with version control and git sync."
readme = "README.md"
keywords = ["issue-tracker", "work-items", "dolt", "project-management"]
categories = ["development-tools", "database"]

[lib]
name = "smooth_pearls"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
dirs-next.workspace = true
thiserror.workspace = true
tracing.workspace = true
smooth-operator.workspace = true
async-trait.workspace = true
tempfile.workspace = true
fs4.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
