[package]
name = "smooai-smooth-plugin"
# Internal crate — part of the `th` binary, not a public library.
# `th` ships as a GitHub binary release; only smooai-smooth-operator-core
# is published to crates.io (separately, as its own crate). Pearl th-607f69.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Plugin — trait-based plugin system for extending Smooth with CLI commands, API routes, TUI views, and operator tools"
readme = "README.md"

[lib]
name = "smooth_plugin"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
smooth-operator.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
