[package]
name = "smooai-smooth-policy"
# Internal crate — part of the `th` binary, not a public library.
# `th` ships as a GitHub binary release; only smooai-smooth-operator-core
# is published to crates.io (separately, as its own crate). Pearl th-607f69.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth policy types — TOML-based access control for Microsandbox operators"
readme = "README.md"
keywords = ["policy", "access-control", "toml", "security", "ai-agents"]
categories = ["config", "authentication"]

[lib]
name = "smooth_policy"

[dependencies]
serde.workspace = true
toml.workspace = true
globset.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
