[package]
name = "smooth-scribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Scribe — Per-VM structured logging service"

[dependencies]
smooth-operator.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
http-body-util.workspace = true
hyper.workspace = true

[lints]
workspace = true
