[package]
name = "smooai-smooth-scribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Scribe — Per-VM structured logging service"
readme = "README.md"

[lib]
name = "smooth_scribe"

[dependencies]
smooth-operator.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true

# gRPC (pearl th-893801).
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
futures-util.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1", features = ["tokio"] }
tempfile.workspace = true

[lints]
workspace = true
