[package]
name = "smooai-smooth-tmux"
# Internal crate — part of the `th` binary, not a public library.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth tmux driver — spawn, drive, and capture programs running inside isolated tmux sessions"

[lib]
name = "smooth_tmux"

[dependencies]
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
