[package]
name = "smooth-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth TUI — ratatui terminal dashboard"

[dependencies]
smooth-leader.workspace = true
ratatui.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
