[package]
name = "smooai-smooth-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Smooth web dashboard — embedded Vite SPA served by axum"

[lib]
name = "smooth_web"

[dependencies]
axum = { workspace = true }
axum-extra.workspace = true
rust-embed = { workspace = true }
tower.workspace = true
mime_guess = "2"
# JSON-encode the injected `window.__SMOOTH_TOKEN__` value so quoting is safe.
serde_json.workspace = true

[dev-dependencies]
# Drive `web_router_with_token` in-process to assert the injected token global.
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
