[package]
name = "smooai-smooth-wonk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Wonk — in-VM access control authority, policy hot-reload, access negotiation"

[[bin]]
name = "smooth-wonk"
path = "src/main.rs"

[lib]
name = "smooth_wonk"
path = "src/lib.rs"

[dependencies]
smooth-operator.workspace = true
smooth-policy.workspace = true
smooth-narc.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
arc-swap.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
http-body-util.workspace = true
hyper.workspace = true

[lints]
workspace = true
