[package]
name = "smooai-smooth-wonk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smooth Wonk — in-VM access control authority, policy hot-reload, access negotiation"
readme = "README.md"

[[bin]]
name = "smooth-wonk"
path = "src/main.rs"

[lib]
name = "smooth_wonk"
path = "src/lib.rs"

[dependencies]
smooth-operator.workspace = true
smooth-policy.workspace = true
smooth-narc.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
arc-swap.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

# gRPC (pearl th-893801). tonic-build compiles proto/wonk.proto in
# build.rs; the workspace `proto/` is the include root so wonk's
# import of narc.proto resolves naturally.
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1", features = ["tokio"] }

[lints]
workspace = true
